--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.commons-codec-1.3.jar=/Users/haiwei/NetBeansProjects/Security/commons-codec-1.3.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/haiwei/.netbeans/7.0/build.properties
+user.properties.file=/Users/13awan/.netbeans/7.0/build.properties
